--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap');
 
 *{
     margin: 0;
@@ -17,6 +18,9 @@ body{
 input , button{
     outline: none;
     border: none;
+}
+textarea:focus , input:focus , button:focus{
+    outline: none;
 }
 #root{
     display: flex;
